# hoyomi

./: .deepsource.toml  .gitignore  .pre-commit-config.yaml  EULA.md  README.md  _routes.json  analysis_options.yaml  build.yaml  build_js_polyfill.sh  devtools_options.yaml  flutter_bootstrap.js  flutter_launcher_icons.yaml  flutter_service_worker.js  format.sh  general-api.swagger  index.html  linux_pack.sh  linux_setup.sh  manifest.json  pubspec.yaml  release.sh  release_hoyomi_bridge.sh  run_chrome.sh  swagger_parser.yaml  version.json
.idx/: dev.nix
android/: build.gradle  gradle.properties  settings.gradle  settings.gradle.kts
assets/: AssetManifest.bin.json  AssetManifest.json  NOTICES
hoyomi_bridge/: README.md  bind.sh  install.sh  pubspec.yaml
hoyomi_bridge_ts/: README.md  bump.config.ts  index.ts  package.json  register_plugin.ts  tsconfig.json
installer/: app_installer.iss
integration_test/: simple_test.dart
js_runtime_polyfill/: README.md  embed.ts  index.ts  package.json  register.ts  tsconfig.json
lib/: env.dart  env.io.dart  env.web.dart  firebase_options.dart  globals.dart  main.dart  objectbox-model.json  objectbox.g.dart  preferences.dart  settings_store.dart  settings_store.g.dart  (+1 more)
rust/: Cargo.toml  build.rs
rust/src/: frb_generated.rs
rust/src/api/http/: error.rs  http.rs  mod.rs
rust/src/api/http/utils/: mod.rs  socket_addr.rs
rust/src/api/image/: auto_trim_image.rs  decode_image_rgba.rs  get_image_size.rs  mod.rs  unscramble_image.rs  unscramble_image_columns.rs  unscramble_image_rows.rs  unscramble_image_vertical.rs  utils.rs
(+1158 files in other folders)
